--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-react-app",
   "version": "0.1.0",
-  "homepage": "http://Muhammad-Juman-jarwar/github.io/Restaurant-Website-project",
+  "homepage": "http://Muhammad-Juman-jarwar.github.io/Restaurant-Website-project",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
